--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- See comments at https://startbootstrap.com/template-overviews/small-business/ -->
 
   <head>
 
