--- a/robots.html
+++ b/robots.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Mr. Robots Store -- Welcome</title>
+    <title>Mr. Robots Store -- Robots</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -31,12 +31,12 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home
+              <a class="nav-link" href="/Users/jonathanjames/apps/ccamp/startbootstrap-small-business/index.html">Home
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/Users/jonathanjames/apps/ccamp/startbootstrap-small-business/robots.html">Robots</a>
+              <a class="nav-link" href="#">Robots</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/Users/jonathanjames/apps/ccamp/startbootstrap-small-business/hardware.html">Hardware</a>
@@ -60,37 +60,19 @@
 
     <!-- Page Content -->
     <div class="container">
-
-      <!-- Heading Row -->
-      <div class="row my-4">
-        <div class="col-lg-8">
-          <img class="img-fluid rounded" src="/Users/jonathanjames/apps/ccamp/startbootstrap-small-business/images/welcome_.jpg" alt="">
-        </div>
-        <!-- /.col-lg-8 -->
-        <div class="col-lg-4">
-          <h1>Mr. Robots</h1>
-          <p>Computer Repair with a smile !</p>
-          <a class="btn btn-primary btn-lg" href="#">Call to Action!</a>
-        </div>
-        <!-- /.col-md-4 -->
-      </div>
-      <!-- /.row -->
-
-      <!-- Call to Action Well -->
-      <div class="text-black bg-secondary my-4 text-left">
-        <div class="row">
-          <div class="col-lg-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam in lobortis ex. Suspendisse vestibulum varius porta. Ut ligula risus, fermentum nec elit eget, feugiat consequat diam. Donec accumsan tristique convallis. Curabitur sit amet facilisis sapien. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque sollicitudin augue et metus volutpat pellentesque. Maecenas dui quam, iaculis at massa in, varius varius lectus. Fusce efficitur justo sed lobortis efficitur. Sed vel quam at mi tristique convallis non id justo.</div>
-          <div class="col-lg-6">Vestibulum molestie odio sed congue tempor. Mauris at nisl a risus finibus efficitur. Mauris quis luctus erat, id auctor tellus. Nulla vel suscipit metus. Donec porta dapibus eros et finibus. Maecenas suscipit nisl sed dictum luctus. Proin suscipit laoreet ante a dictum. Donec ornare, erat quis dignissim maximus, neque ex laoreet massa, sed convallis turpis turpis ut elit. Suspendisse varius augue ante, sed fermentum dui facilisis non. Nulla neque leo, placerat ut tempor quis, ornare sed lorem. Mauris egestas sem non magna semper lobortis.</div>
-        </div><!--.row-->
-      </div>
+      <br />
+      <br />
+      <h3>Mr. Robot's Top Robot Models</h3>
 
       <!-- Content Row -->
       <div class="row">
         <div class="col-md-4 mb-4">
           <div class="card h-100">
             <div class="card-body">
-              <h2 class="card-title">Card One</h2>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+              <h2 class="card-title">R.E.T.</h2>
+              <p class="card-text">This was our first robot.
+               He was modeled after the famous movie character E.T.</p>
+              <img class="item_1" src="/Users/jonathanjames/apps/ccamp/startbootstrap-small-business/images/roboDog_.png" />
             </div>
             <div class="card-footer">
               <a href="#" class="btn btn-primary">More Info</a>
@@ -101,8 +83,9 @@
         <div class="col-md-4 mb-4">
           <div class="card h-100">
             <div class="card-body">
-              <h2 class="card-title">Card Two</h2>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
+              <h2 class="card-title">Butler.Bot</h2>
+              <p class="card-text">This was our second robot. He makes a mean martini!</p>
+              <img class="item_2" src="/Users/jonathanjames/apps/ccamp/startbootstrap-small-business/images/robot2_.png" />
             </div>
             <div class="card-footer">
               <a href="#" class="btn btn-primary">More Info</a>
@@ -113,8 +96,9 @@
         <div class="col-md-4 mb-4">
           <div class="card h-100">
             <div class="card-body">
-              <h2 class="card-title">Card Three</h2>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+              <h2 class="card-title">Mega Man</h2>
+              <p class="card-text">This is our newest model. This one will follow you around the house.</p>
+              <img class="item_3" src="/Users/jonathanjames/apps/ccamp/startbootstrap-small-business/images/robot3_.png" />
             </div>
             <div class="card-footer">
               <a href="#" class="btn btn-primary">More Info</a>
