--- a/hardware.html
+++ b/hardware.html
@@ -16,7 +16,6 @@
 
     <!-- Custom styles for this template -->
     <link href="css/small-business.css" rel="stylesheet">
-
   </head>
 
   <body>
@@ -108,7 +107,7 @@
         </div><!--.row-->
         <br />
         <br />
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button id="hardwareSubmit" type="submit" class="btn btn-primary">Submit</button>
       </div>
 
 
@@ -129,6 +128,9 @@
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
+    <!-- Read Form Submission Data -->
+    <script src="/Users/jonathanjames/apps/ccamp/startbootstrap-small-business/hardwareData.js" type="text/javascript"></script>
+
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   </body>
