--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
           </ul>
         </div>
         <div class="input-group">
-     <input type="text" class="form-control" placeholder="Search for...">
+     <input type="text" id="searchBar" class="form-control" placeholder="Search for...">
      <span class="input-group-btn">
        <button class="btn btn-secondary" type="button">Go!</button>
      </span>
@@ -99,6 +99,8 @@
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/Users/jonathanjames/apps/ccamp/startbootstrap-small-business/search.js" type="text/javascript"></script>
+
 
   </body>
 
