--- a/hardware.html
+++ b/hardware.html
@@ -49,7 +49,7 @@
           </ul>
         </div>
         <div class="input-group">
-     <input type="text" class="form-control" placeholder="Search for...">
+     <input type="text" id="searchBar" class="form-control" placeholder="Search for...">
      <span class="input-group-btn">
        <button class="btn btn-secondary" type="button">Go!</button>
      </span>
@@ -132,6 +132,8 @@
     <script src="/Users/jonathanjames/apps/ccamp/startbootstrap-small-business/hardwareData.js" type="text/javascript"></script>
 
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/Users/jonathanjames/apps/ccamp/startbootstrap-small-business/search.js" type="text/javascript"></script>
+
 
   </body>
 
