--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-light fixed-top">
+      <div class="col-lg-12 searchBox"></div>
       <div class="container">
         <a class="navbar-brand" href="/Users/jonathanjames/apps/ccamp/startbootstrap-small-business/index.html"><img src="/Users/jonathanjames/apps/ccamp/startbootstrap-small-business/images/logo_mark.jpg"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,7 +51,7 @@
           </ul>
         </div>
         <div class="input-group">
-     <input type="text" class="form-control" placeholder="Search for...">
+     <input type="text" id="searchBar" class="form-control" placeholder="Search for...">
      <span class="input-group-btn">
        <button class="btn btn-secondary" type="button">Go!</button>
      </span>
@@ -143,6 +144,8 @@
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- Search js for search bar -->
+    <script src="/Users/jonathanjames/apps/ccamp/startbootstrap-small-business/search.js" type="text/javascript"></script>
 
   </body>
 
