--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- Search js for search bar -->
     <script src="/Users/jonathanjames/apps/ccamp/startbootstrap-small-business/search.js" type="text/javascript"></script>
+<!-- NEW SEARCH MARKUP - STARTS 
+
+ NEW SEARCH MARKUP - ENDS !-->
 
   </body>
 
